[package]
name = "jtimon-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.21"
prost = "0.12.4"
prost-types = "0.12.4"
serde = { version = "1.0.198", features = ["derive", "serde_derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.37.0", features = ["full"] }
tonic = { version = "0.11.0", features = ["tls"] }


[build-dependencies]
tonic-build = "0.11.0"
